# shm_lib

./: .gitignore  CMakeLists.txt  README.md  README.ru.md  base-kit.cmake
docs/: technical_documentation.md
examples/: example1.c
include/: shm_api.h  shm_base_define.h  shm_bridge.h  shm_defines.h  shm_includes.h
src/: shm_api.c  shm_bridge.c  shm_close.c  shm_destroy.c  shm_getData.c  shm_rewrite.c  shm_simple_open.c  shm_write.c
tests/test1/: CMakeLists.txt  main.c
tests/test2/: CMakeLists.txt  main.c
tests/test3/: CMakeLists.txt  main.c
tests/test_bridge/: CMakeLists.txt  main.c
tests/test_channel/: CMakeLists.txt  main.c  main.c~
